--- a/.github/workflows/hoge.yml
+++ b/.github/workflows/hoge.yml
@@ -1,9 +1,6 @@
 name: Deployment
 
 on:
-  schedule:
-    # 毎日 22:01 に実行
-    - cron: 1 22 * * *
   workflow_dispatch:
 
 jobs:
@@ -21,3 +18,19 @@ jobs:
     - uses: actions/setup-node@v2
       with:
         node-version: "16"
+        
+    - name: Initialize
+      run: yarn install
+
+    - name: Deploy aws infrastructure
+      run: |
+        yarn cdk synth
+        yarn cdk deploy --outputs-file cfn-output.json hoge-stack
+      working-directory: ./cdk
+
+    - name: Build web application
+      run: |
+        yarn config:ui
+        yarn build:ui
+    - name: Deploy web application
+      run: yarn deploy:ui
