--- a/.github/workflows/hoge.yml
+++ b/.github/workflows/hoge.yml
@@ -21,6 +21,12 @@ jobs:
         
     - name: Initialize
       run: yarn install
+  
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        role-to-assume: arn:aws:iam::1111111111:role/hogehoge-asdfasd
+        aws-region: ap-northeast-1
 
     - name: Deploy aws infrastructure
       run: |
