--- a/.github/workflows/create-release-pull-request.yml
+++ b/.github/workflows/create-release-pull-request.yml
@@ -21,3 +21,5 @@ jobs:
     steps:
       - name: Create pull request
         run: gh pr create --base main --head develop --title Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
