--- a/.github/workflows/create-release-pull-request.yml
+++ b/.github/workflows/create-release-pull-request.yml
@@ -22,8 +22,17 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: develop
-    
+
+      - name: Get current date
+        env: 
+          TZ: "Asia/Tokyo"
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+
+      - name: Show date and time
+        run: echo ${{ steps.date.outputs.date }} # 2022-01-03 10:42
+
       - name: Create pull request
-        run: gh pr create --base main --head develop --title "Release" --body "body"
+        run: gh pr create --base main --head develop --title "Staging リリース - ${{ steps.date.outputs.date }}" --body "Staging にリリースします。" --label "release"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
