--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,9 +14,13 @@ jobs:
         env:
           TZ: "Asia/Tokyo"
         run: |
-          echo "current_date=`date +'%Y-%m-%d'`" >> "$GITHUB_ENV"
+          echo "current_date=`date +'%Y-%m-%dT%H-%M-%S'`" >> "$GITHUB_ENV"
 
       - name: Test
         run: |
-          echo "::notice ::${{ env.current_date }}
+          echo "::notice ::${{ env.current_date }}"
+          
+      - name: Create release
+        run: |
+          gh release create ${{ env.current_date }} --generate-notes --target main
       
