--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,8 @@ jobs:
           echo "::notice ::${{ env.current_date }}"
           
       - name: Create release
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
           gh release create ${{ env.current_date }} --generate-notes --target main
       
