--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,5 @@ jobs:
           GH_TOKEN: ${{ github.token }}
           TZ: "Asia/Tokyo"
         run: |
-          echo "current_date=`date +'%Y-%m-%dT%H:%M:%S'`" >> "$GITHUB_ENV"
-          gh release create ${{ env.current_date }} --generate-notes --target main
+          gh release create `date +'%Y-%m-%dT%H:%M:%S'` --generate-notes --target main
       
