--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,5 +15,5 @@ jobs:
           GH_TOKEN: ${{ github.token }}
           TZ: "Asia/Tokyo"
         run: |
-          gh release create `date +'%Y-%m-%dT%H:%M:%S'` --generate-notes --target main
+          gh release create `date +'%Y-%m-%dT%H-%M-%S'` --generate-notes --target main
       
