--- a/.github/workflows/ref_test.yaml
+++ b/.github/workflows/ref_test.yaml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          ref: develop
 
       - name: Create release
         run: |
