--- a/.github/workflows/create-release-pull-request.yml
+++ b/.github/workflows/create-release-pull-request.yml
@@ -22,24 +22,21 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: develop
-          
-      - name: Create release branch
-        run: |
-          git checkout -b release-branch
-          git push origin release-branch
+
+      - uses: actions/setup-ruby@v1
+        with:
+          ruby-version: 3.1
+
+      - name: Setup git-pr-release
+        run: gem install --no-document git-pr-release
+
+      - name: Create release pull request
+        run: git-pr-release --squashed
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Get current date
-        env: 
-          TZ: "Asia/Tokyo"
-        id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
-
-      - name: Show date and time
-        run: echo ${{ steps.date.outputs.date }} # 2022-01-03 10:42
-
-      - name: Create pull request
-        run: gh pr create --base main --head release-branch --title "Staging リリース - ${{ steps.date.outputs.date }}" --body "Staging にリリースします。" --label "release" --reviewer 'ijuinke'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GIT_PR_RELEASE_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GIT_PR_RELEASE_BRANCH_PRODUCTION: main
+          GIT_PR_RELEASE_BRANCH_STAGING: develop
+          GIT_PR_RELEASE_LABELS: release
+          GIT_PR_RELEASE_TEMPLATE: .github/pr-release-template.erb
+          DEPLOY_TARGET: デプロイターゲット
+          TZ: Asia/Tokyo
