--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,6 @@ jobs:
         run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Installed rust target
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          rustup target list --installed
