--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,8 @@ jobs:
 
       - name: Setup Zig
         run: |
-          apt install zig
+          sudo apt update
+          sudo apt install zig
           zig --version
 
       # Runs a set of commands using the runners shell
