--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Setup Zig
         run: |
           sudo apt update
+          sudo apt search zig
           sudo apt install zig
           zig --version
 
