--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup Zig
-        run: |
-          sudo apt update
-          sudo apt search zig
+      - run: rustup show active-toolchain
 
       - name: Installed rust target
         run: |
