--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,4 @@ jobs:
 
       - name: Installed rust target
         run: |
-          rustup target list --installed
+          rustc --version --verbose
