--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,5 +7,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    steps:
+    steps:      
+      - uses: actions/checkout@v4
       - run: bash ./run.sh
